using pixels for some spacings to prevent variability.

--- a/src/App.css
+++ b/src/App.css
@@ -310,8 +310,8 @@
 
 .userpage-tab-container {
   min-width: 15%;
-  margin-top: -1.6%;
-  margin-left: 0.4%;
+  margin-top: -23px;
+  margin-left: 5px;
 }
 
 .userpage-tabs-container {
